# cuASR

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  run_clang_format.sh
bench/: CMakeLists.txt  cpu_bench.cpp  gpu_bench.cpp  gpu_bench.cu
bench/device/: CMakeLists.txt  gen_default_bench.py  gen_simt.py  harness.h  simt_binary_or_binary_and_dsrgemm_nn_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_nn_t_sm50.cu  simt_binary_or_binary_and_dsrgemm_nt_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_nt_t_sm50.cu  simt_binary_or_binary_and_dsrgemm_tn_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_tn_t_sm50.cu  simt_binary_or_binary_and_dsrgemm_tt_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_tt_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_nn_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_nn_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_nt_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_nt_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_tn_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_tn_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_tt_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_tt_t_sm50.cu  simt_maximum_minimum_dsrgemm_nn_n_sm50.cu  simt_maximum_minimum_dsrgemm_nn_t_sm50.cu  simt_maximum_minimum_dsrgemm_nt_n_sm50.cu  simt_maximum_minimum_dsrgemm_nt_t_sm50.cu  simt_maximum_minimum_dsrgemm_tn_n_sm50.cu  simt_maximum_minimum_dsrgemm_tn_t_sm50.cu  simt_maximum_minimum_dsrgemm_tt_n_sm50.cu  simt_maximum_minimum_dsrgemm_tt_t_sm50.cu  simt_maximum_minimum_ssrgemm_nn_n_sm50.cu  simt_maximum_minimum_ssrgemm_nn_t_sm50.cu  simt_maximum_minimum_ssrgemm_nt_n_sm50.cu  simt_maximum_minimum_ssrgemm_nt_t_sm50.cu  simt_maximum_minimum_ssrgemm_tn_n_sm50.cu  simt_maximum_minimum_ssrgemm_tn_t_sm50.cu  simt_maximum_minimum_ssrgemm_tt_n_sm50.cu  simt_maximum_minimum_ssrgemm_tt_t_sm50.cu  simt_maximum_multiplies_dsrgemm_nn_n_sm50.cu  simt_maximum_multiplies_dsrgemm_nn_t_sm50.cu  simt_maximum_multiplies_dsrgemm_nt_n_sm50.cu  simt_maximum_multiplies_dsrgemm_nt_t_sm50.cu  (+479 more)
examples/: CMakeLists.txt
examples/00_minplus_srgemm/: CMakeLists.txt  minplus_srgemm.cu
examples/01_userdefined_semiring/: CMakeLists.txt  userdefined_semiring.cu
examples/02_splitk_srgemm/: CMakeLists.txt  splitk_srgemm.cu
include/: cpu_gemm.hpp  cpu_srgemm.hpp  gpu_gemm.cuh  gpu_gemm_entry.cuh  gpu_srgemm.cuh  gpu_srgemm.hpp
include/cuasr/: functional.h
include/cuasr/arch/: functional.h  srmma.h
include/cuasr/device/: default_srgemm_configuration.h  srgemm.h
include/cuasr/epilogue/thread/: semiring_addition_op.h  semiring_linear_combination.h
include/cuasr/gemm/device/: default_srgemm_configuration.h  srgemm.h  srgemm_splitk_parallel.h
include/cuasr/gemm/kernel/: default_srgemm.h  default_srgemm_splitk_parallel.h  srgemm.h  srgemm_splitk_parallel.h
include/cuasr/gemm/thread/: srmma.h  srmma_sm50.h
include/cuasr/gemm/threadblock/: default_srmma.h  default_srmma_core.h  default_srmma_core_simt.h  default_srmma_core_sm80.h  srmma_multistage.h  srmma_pipelined.h
include/cuasr/gemm/warp/: srmma_simt.h
include/cuasr/kernel/: default_srgemm.h  srgemm.h
include/cuasr/reduction/kernel/: reduce_split_k.h
include/cuasr/reduction/thread/: reduce.h  reduction_operators.h
include/cuasr/thread/: srmma.h  srmma_sm50.h
include/cuasr/threadblock/: default_srmma.h  default_srmma_core.h  default_srmma_core_simt.h  srmma_singlestage.h
include/cuasr/warp/: srmma_simt.h
include/fwgpu/: Matrix.hpp  cpu_fwgemm.hpp  cpu_gemm.hpp  cpu_srgemm.hpp  gpu_fwgemm.cuh  gpu_gemm.cuh  gpu_srgemm.cuh  gpu_srgemm.hpp  utils.hpp
include/fwgpu/internal/: utils.cuh
include/fwgpu/srgemm/: functional.h
include/fwgpu/srgemm/arch/: srmma.h
include/fwgpu/srgemm/device/: default_srgemm_configuration.h  srgemm.h
include/fwgpu/srgemm/kernel/: default_srgemm.h  srgemm.h
include/fwgpu/srgemm/thread/: srmma.h  srmma_sm50.h
include/internal/: utils.cuh
src/: CMakeLists.txt  cublas_sgemm.cu  cutlass_sgemm.cu  cutlass_srgemm.cu  gpu_gemm_entry.cu  utils.cu
test/: CMakeLists.txt  Fwgemm_test.cu  GemmEntry.cu  GemmEntry.cuh  Gemm_test.cpp  Gemm_test.cu  Matrix_test.cpp  Srgemm_test.cpp  Srgemm_test.cu  harness.cpp
test/device/: CMakeLists.txt  gen_default_test.py  gen_defualt_test.py  gen_simt.py  simt_binary_or_binary_and_dsrgemm_nn_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_nn_t_sm50.cu  simt_binary_or_binary_and_dsrgemm_nt_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_nt_t_sm50.cu  simt_binary_or_binary_and_dsrgemm_tn_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_tn_t_sm50.cu  simt_binary_or_binary_and_dsrgemm_tt_n_sm50.cu  simt_binary_or_binary_and_dsrgemm_tt_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_nn_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_nn_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_nt_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_nt_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_tn_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_tn_t_sm50.cu  simt_binary_or_binary_and_ssrgemm_tt_n_sm50.cu  simt_binary_or_binary_and_ssrgemm_tt_t_sm50.cu  simt_maximum_minimum_dsrgemm_nn_n_sm50.cu  simt_maximum_minimum_dsrgemm_nn_t_sm50.cu  simt_maximum_minimum_dsrgemm_nt_n_sm50.cu  simt_maximum_minimum_dsrgemm_nt_t_sm50.cu  simt_maximum_minimum_dsrgemm_tn_n_sm50.cu  simt_maximum_minimum_dsrgemm_tn_t_sm50.cu  simt_maximum_minimum_dsrgemm_tt_n_sm50.cu  simt_maximum_minimum_dsrgemm_tt_t_sm50.cu  simt_maximum_minimum_ssrgemm_nn_n_sm50.cu  simt_maximum_minimum_ssrgemm_nn_t_sm50.cu  simt_maximum_minimum_ssrgemm_nt_n_sm50.cu  simt_maximum_minimum_ssrgemm_nt_t_sm50.cu  simt_maximum_minimum_ssrgemm_tn_n_sm50.cu  simt_maximum_minimum_ssrgemm_tn_t_sm50.cu  simt_maximum_minimum_ssrgemm_tt_n_sm50.cu  simt_maximum_minimum_ssrgemm_tt_t_sm50.cu  simt_maximum_multiplies_dsrgemm_nn_n_sm50.cu  simt_maximum_multiplies_dsrgemm_nn_t_sm50.cu  simt_maximum_multiplies_dsrgemm_nt_n_sm50.cu  simt_maximum_multiplies_dsrgemm_nt_t_sm50.cu  (+480 more)
test/regress/: CMakeLists.txt  Matrix_test.cpp  Srgemm_test.cu  utils.cuh
test/regress/include/fwgpu/: Matrix.hpp  cpu_srgemm.hpp  gpu_srgemm.cuh  gpu_srgemm.hpp
test/regress/src/: cutlass_srgemm.cu
(+10 files in other folders)
